ags (1.2.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented async message AgsConnection:data-object and AgsAudioConnection:mapped-line
	* implemented ags_audio_disconnect()
	* improved thread-safety to AgsLine:channel and AgsEffectLine:channel properties
	* improved thread-safety AgsPatternBox and AgsCellPattern
	* improved thread-safety all audio tasks
	* TODO:JK: improved thread-safety during ags_channel_set_link() and ags_channel_set_recycling()
	* TODO:JK: improved thread-safety during ags_channel_recursive_play_init() and ags_channel_recursive_cancel()
	* improved tasks which need to lock audio especially using AgsCropNote and AgsMoveNote
	* fixed change soundcard task since data-object was resetted for all connections
	* minor-fixes

ags (1.2.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed remaining launch callback of AgsTask while destroy AgsMachine
	* minor-fixes

ags (1.2.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsNotationEditor and AgsNotationEdit
	* replaced AgsEditor by AgsNotationEditor and supporting segmented notation
	* replaced AgsNoteEdit and AgsPatternEdit by AgsNotationEdit
	* implemented AgsMessageDelivery and AgsMessageQueue
	* implemented messages of AgsAudio ::set-audio-channels, ::set-pads and ::done
	* implemented messages of AgsChannel ::add-effect, ::remove-effect and ::done
	* implemented AgsPiano and AgsScrolledPiano
	* implemented AgsDevin
	* implemented AgsJackDevin
	* implemented AgsPulseDevin
	* refactored direct callbacks to UI by replacing with messages
	* refactored ::set-audio-channels and ::set-pads of AgsAudio callbacks to be thread-safe
	* disabled AgsGuiThread synchronization with AgsTaskThread
	* extended AgsJackServer and AgsJackClient to support AgsJackDevin
	* extended AgsPulseServer, AgsPulseClient and AgsPulsePort to support AgsPulseDevin